--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
 
-    <title>Tremcat</title>
+    <title>Trempcat</title>
 
     <!-- Fav Icon -->
     <link rel="icon" href="/assets/images/photo_2024-05-30_15-19-46.jpg" type="image/x-icon" />
@@ -68,7 +68,7 @@
                     alt=""
                     style="width: 80px"
                   /> -->
-                  <h2 style="font-size: 40px; color: #000">Tremcat</h2>
+                  <h2 style="font-size: 40px; color: #000">Trempcat</h2>
                 </a>
               </figure>
             </div>
@@ -108,7 +108,7 @@
         <div class="container clearfix">
           <figure class="logo-box">
             <a href="index.html">
-              <h2 style="font-size: 35px; color: #000">Tremcat</h2>
+              <h2 style="font-size: 35px; color: #000">Trempcat</h2>
             </a>
           </figure>
           <div class="menu-area">
@@ -129,7 +129,7 @@
       <nav class="menu-box">
         <div class="nav-logo">
           <a href="index.html">
-            <h2 style="font-size: 35px; color: #fff">Tremcat</h2>
+            <h2 style="font-size: 35px; color: #fff">Trempcat</h2>
           </a>
         </div>
         <div class="menu-outer">
@@ -163,7 +163,7 @@
             >
               <p style="color: #000">WELCOME TO</p>
               <div class="mt-4 mb-5">
-                <h1 style="color: #000">Tremcat</h1>
+                <h1 style="color: #000">Trempcat</h1>
               </div>
               <div class="btn-box">
                 <a href="buylink" target="_blank" class="theme-btn style-one">
@@ -252,7 +252,7 @@
                   data-wow-duration="1500ms"
                 >
                   <p style="color: #000">About</p>
-                  <h1 style="color: #000">Tremcat</h1>
+                  <h1 style="color: #000">Trempcat</h1>
                 </div>
                 <div
                   class="text wow slideInUp"
@@ -260,9 +260,9 @@
                   data-wow-duration="1500ms"
                 >
                   <p style="color: #000">
-                    Introducing Tremcat, the latest sensation in the world of
+                    Introducing Trempcat, the latest sensation in the world of
                     meme tokens! Born from the depths of internet culture,
-                    Tremcat combines the enigmatic allure of the Trump with
+                    Trempcat combines the enigmatic allure of the Trump with
                     the adorable Cat, creating a unique and
                     captivating crypto phenomenon.
                     <br />
@@ -315,9 +315,9 @@
             <h1>OUR Partners</h1>
           </div>
           <!-- <p>
-            In Tremcat 's world, everyone feasts and fattens their wallets. It's
+            In Trempcat 's world, everyone feasts and fattens their wallets. It's
             time to break free from the crowd and bring home the bacon with Zing
-            LFG. Embrace the Tremcat  revolution for a future abundant in luck,
+            LFG. Embrace the Trempcat  revolution for a future abundant in luck,
             wealth, and prosperity!
           </p> -->
           <div class="tabs-box">
@@ -414,12 +414,12 @@
         <div class="sec-title text-center">
           <p>Token Info</p>
           <div class="mt-4 mb-4">
-            <h1>Tremcat</h1>
+            <h1>Trempcat</h1>
           </div>
           <!-- <p>
-            In Tremcat 's world, everyone feasts and fattens their wallets. It's
+            In Trempcat 's world, everyone feasts and fattens their wallets. It's
             time to break free from the crowd and bring home the bacon with Zing
-            LFG. Embrace the Tremcat  revolution for a future abundant in luck,
+            LFG. Embrace the Trempcat  revolution for a future abundant in luck,
             wealth, and prosperity!
           </p> -->
           <div class="tabs-box">
@@ -843,7 +843,7 @@
             </div>
           </div>
           <h3>
-            Join the Tremcat revolution and let Tremcat lead you to a future
+            Join the Trempcat revolution and let Trempcat lead you to a future
             filled with luck, wealth and bags of prosperity!
           </h3>
           <a
@@ -864,7 +864,7 @@
         <div class="footer-bottom clearfix">
           <div class="copyright pull-left">
             <p>
-              <a href="index.html">Tremcat </a> &copy; 2024 All Rights
+              <a href="index.html">Trempcat </a> &copy; 2024 All Rights
               Reserved.<br />
               <!-- Mail us at
               <a href="mailto:admin@pangpang.io">admin@pangpang.io</a> -->
