--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
     <link href="assets/css/rtl.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
     <link href="assets/css/responsive.css" rel="stylesheet" />
+    <style>
+      .txt{
+        color: #fff !important;
+      }
+    </style>
   </head>
 
   <!-- page wrapper -->
@@ -68,7 +73,7 @@
                     alt=""
                     style="width: 80px"
                   /> -->
-                  <h2 style="font-size: 40px; color: #000">Trempcat</h2>
+                  <h2 style="font-size: 40px; color: #000" class="txt">Trempcat</h2>
                 </a>
               </figure>
             </div>
@@ -85,11 +90,11 @@
                   id="navbarSupportedContent"
                 >
                   <ul class="navigation clearfix">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#tokenomics">Tokenomics</a></li>
-                    <li><a href="#roadmap">Roadmap</a></li>
-                    <li><a href="https://dexscreener.com/solana/6Gai2aMBzhQ5Ua5u5bCuGXJNDRUDqdN4bcGqaFPPZsyk">Chart</a></li>
+                    <li><a href="index.html" class="txt">Home</a></li>
+                    <li><a href="#about" class="txt">About</a></li>
+                    <li><a href="#tokenomics" class="txt">Tokenomics</a></li>
+                    <li><a href="#roadmap" class="txt">Roadmap</a></li>
+                    <li><a href="https://dexscreener.com/solana/6Gai2aMBzhQ5Ua5u5bCuGXJNDRUDqdN4bcGqaFPPZsyk" class="txt">Chart</a></li>
                   </ul>
                 </div>
               </nav>
@@ -161,9 +166,9 @@
               data-wow-delay="0ms"
               data-wow-duration="1500ms"
             >
-              <p style="color: #000">WELCOME TO</p>
+              <p style="color: #ffffff">WELCOME TO</p>
               <div class="mt-4 mb-5">
-                <h1 style="color: #000">Trempcat</h1>
+                <h1 style="color: #ffffff">Trempcat</h1>
               </div>
               <div class="btn-box">
                 <a href="buylink" target="_blank" class="theme-btn style-one">
@@ -251,15 +256,15 @@
                   data-wow-delay="00ms"
                   data-wow-duration="1500ms"
                 >
-                  <p style="color: #000">About</p>
-                  <h1 style="color: #000">Trempcat</h1>
+                  <p style="color: #000"  class="txt">About</p>
+                  <h1 style="color: #000"  class="txt">Trempcat</h1>
                 </div>
                 <div
                   class="text wow slideInUp"
                   data-wow-delay="300ms"
                   data-wow-duration="1500ms"
                 >
-                  <p style="color: #000">
+                  <p style="color: #000"  class="txt">
                     Introducing Trempcat, the latest sensation in the world of
                     meme tokens! Born from the depths of internet culture,
                     Trempcat combines the enigmatic allure of the Trump with
@@ -270,8 +275,7 @@
                    
                   </p>
 
-                  <p></p>
-                  <h6><br />CA :  Hmu2jzb2UMdGt1hBpbySQ87dSMR4aU94kXomenaCaAuN</h6>
+                  <h6  class="txt"><br />CA :  Hmu2jzb2UMdGt1hBpbySQ87dSMR4aU94kXomenaCaAuN</h6>
                 </div>
                 <div
                   class="btn-box wow slideInUp"
@@ -312,7 +316,7 @@
         <div class="sec-title text-center">
           <p></p>
           <div class="mt-4 mb-4">
-            <h1>OUR Partners</h1>
+            <h1  class="txt">OUR Partners</h1>
           </div>
           <!-- <p>
             In Trempcat 's world, everyone feasts and fattens their wallets. It's
@@ -412,9 +416,9 @@
     <section class="project-section" id="tokenomics">
       <div class="auto-container">
         <div class="sec-title text-center">
-          <p>Token Info</p>
+          <p  class="txt">Token Info</p>
           <div class="mt-4 mb-4">
-            <h1>Trempcat</h1>
+            <h1  class="txt">Trempcat</h1>
           </div>
           <!-- <p>
             In Trempcat 's world, everyone feasts and fattens their wallets. It's
@@ -689,9 +693,9 @@
       ></div>
       <div class="auto-container">
         <div class="upper-box">
-          <div class="sec-title">
+          <div class="sec-title" >
             <p></p>
-            <h1>ROADMAP</h1>
+            <h1  class="txt">ROADMAP</h1>
           </div>
           <div class="text">
             <p></p>
@@ -842,7 +846,7 @@
               </figure>
             </div>
           </div>
-          <h3>
+          <h3  class="txt"> 
             Join the Trempcat revolution and let Trempcat lead you to a future
             filled with luck, wealth and bags of prosperity!
           </h3>
